Added bigrams to LDA

--- a/LDA.ipynb
+++ b/LDA.ipynb
@@ -2,23 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 69,
    "id": "305b0a04",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import nltk\n",
+    "from pprint import pprint\n",
     "from nltk.corpus import stopwords\n",
     "from gensim.utils import simple_preprocess\n",
+    "from gensim.models import Phrases, LdaModel\n",
+    "from gensim.models.phrases import Phraser\n",
     "from gensim import corpora\n",
-    "from gensim.models import LdaModel, CoherenceModel\n",
-    "from pprint import pprint"
+    "from gensim.models.coherencemodel import CoherenceModel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 70,
    "id": "b44f0e77",
    "metadata": {},
    "outputs": [
@@ -26,8 +27,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to C:\\Users\\Fatima\n",
-      "[nltk_data]     Dy\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\vldth\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
@@ -37,7 +38,7 @@
        "True"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 71,
    "id": "20eb23e6",
    "metadata": {},
    "outputs": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 72,
    "id": "04ac2df1",
    "metadata": {},
    "outputs": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 73,
    "id": "4ec261ac",
    "metadata": {},
    "outputs": [],
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 74,
    "id": "001e98d7",
    "metadata": {},
    "outputs": [],
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "01e67728",
    "metadata": {},
    "outputs": [],
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 76,
    "id": "215e29fa",
    "metadata": {},
    "outputs": [],
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 77,
    "id": "b3c0885c",
    "metadata": {},
    "outputs": [],
@@ -165,7 +166,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 78,
+   "id": "3446b851",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create bigram and trigram models\n",
+    "bigram = Phrases(processed_texts, min_count=3, threshold=5)\n",
+    "trigram = Phrases(bigram[processed_texts], threshold=5)\n",
+    "\n",
+    "bigram_mod = Phraser(bigram)\n",
+    "trigram_mod = Phraser(trigram)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "06329215",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply phrase models\n",
+    "def make_ngrams(texts):\n",
+    "    return [trigram_mod[bigram_mod[doc]] for doc in texts]\n",
+    "\n",
+    "processed_texts = make_ngrams(processed_texts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "id": "0bfd68f1",
    "metadata": {},
    "outputs": [],
@@ -177,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 81,
    "id": "a38676bf",
    "metadata": {},
    "outputs": [],
@@ -189,7 +219,8 @@
     "    id2word=id2word,\n",
     "    num_topics=num_topics,\n",
     "    random_state=42,\n",
-    "    passes=10,\n",
+    "    passes=20,\n",
+    "    iterations=1000,\n",
     "    alpha='auto',\n",
     "    per_word_topics=True\n",
     ")"
@@ -197,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 82,
    "id": "195f2b20",
    "metadata": {},
    "outputs": [
@@ -208,44 +239,44 @@
       "\n",
       "Topics found by LDA:\n",
       "[(0,\n",
-      "  '0.036*\"godbless\" + 0.030*\"overall\" + 0.021*\"arrived\" + 0.016*\"mystery\" + '\n",
-      "  '0.016*\"immediately\" + 0.013*\"mejo\" + 0.013*\"pouch\" + 0.012*\"mouse\" + '\n",
-      "  '0.011*\"better\" + 0.009*\"ty\"'),\n",
+      "  '0.081*\"po\" + 0.047*\"maganda\" + 0.029*\"seller\" + 0.025*\"ganda\" + '\n",
+      "  '0.025*\"thank_seller\" + 0.025*\"good\" + 0.023*\"order\" + 0.022*\"thank\" + '\n",
+      "  '0.019*\"item\" + 0.016*\"quality\"'),\n",
       " (1,\n",
-      "  '0.054*\"size\" + 0.044*\"order\" + 0.031*\"yung\" + 0.029*\"kaso\" + 0.029*\"color\" '\n",
-      "  '+ 0.029*\"dumating\" + 0.021*\"maliit\" + 0.020*\"black\" + 0.017*\"kulay\" + '\n",
-      "  '0.016*\"mali\"'),\n",
+      "  '0.013*\"ganda_po\" + 0.013*\"food\" + 0.013*\"plastic\" + 0.012*\"time\" + '\n",
+      "  '0.012*\"bilis_dumating\" + 0.009*\"dumi\" + 0.008*\"expected\" + '\n",
+      "  '0.008*\"god_bless\" + 0.008*\"malakas\" + 0.007*\"part\"'),\n",
       " (2,\n",
-      "  '0.018*\"pink\" + 0.018*\"kulay\" + 0.017*\"dumating\" + 0.016*\"order\" + '\n",
-      "  '0.014*\"kaso\" + 0.013*\"color\" + 0.013*\"blue\" + 0.010*\"inorder\" + 0.009*\"nag\" '\n",
-      "  '+ 0.009*\"mag\"'),\n",
+      "  '0.018*\"still\" + 0.015*\"like\" + 0.008*\"nagustohan\" + 0.008*\"anyway\" + '\n",
+      "  '0.008*\"konting\" + 0.007*\"ringlight\" + 0.007*\"even\" + 0.007*\"thank_thank\" + '\n",
+      "  '0.007*\"excellent_quality\" + 0.007*\"freebies\"'),\n",
       " (3,\n",
-      "  '0.086*\"yung\" + 0.030*\"kaso\" + 0.020*\"item\" + 0.017*\"kasi\" + 0.014*\"maganda\" '\n",
-      "  '+ 0.013*\"wala\" + 0.012*\"pag\" + 0.010*\"nung\" + 0.010*\"nya\" + 0.009*\"parang\"'),\n",
+      "  '0.011*\"magaan\" + 0.009*\"lakas\" + 0.008*\"bet\" + 0.007*\"maingay\" + '\n",
+      "  '0.007*\"pretty\" + 0.006*\"super_sulit\" + 0.006*\"handle\" + 0.006*\"solid\" + '\n",
+      "  '0.006*\"nice_product\" + 0.005*\"matagal_dumating\"'),\n",
       " (4,\n",
-      "  '0.061*\"thank\" + 0.050*\"maganda\" + 0.048*\"seller\" + 0.046*\"good\" + '\n",
-      "  '0.036*\"quality\" + 0.030*\"price\" + 0.021*\"nice\" + 0.018*\"tela\" + '\n",
-      "  '0.016*\"medyo\" + 0.015*\"nya\"'),\n",
+      "  '0.008*\"god_bless_po\" + 0.008*\"mukhang_matibay\" + 0.008*\"mouse_pad\" + '\n",
+      "  '0.007*\"jogger\" + 0.007*\"secure\" + 0.007*\"kapal\" + 0.007*\"basa\" + '\n",
+      "  '0.006*\"socks\" + 0.006*\"mouse\" + 0.006*\"ibang_color\"'),\n",
       " (5,\n",
-      "  '0.028*\"uulitin\" + 0.013*\"staff\" + 0.013*\"tumagal\" + 0.009*\"jogging\" + '\n",
-      "  '0.009*\"kapal\" + 0.009*\"service\" + 0.008*\"hotel\" + 0.008*\"lakas\" + '\n",
-      "  '0.007*\"compared\" + 0.006*\"week\"'),\n",
+      "  '0.099*\"yung\" + 0.044*\"kaso\" + 0.026*\"kasi\" + 0.018*\"size\" + 0.012*\"parang\" '\n",
+      "  '+ 0.010*\"price\" + 0.010*\"rin\" + 0.010*\"goods\" + 0.009*\"pag\" + 0.009*\"nung\"'),\n",
       " (6,\n",
-      "  '0.059*\"order\" + 0.051*\"seller\" + 0.034*\"thank\" + 0.030*\"shop\" + '\n",
-      "  '0.028*\"time\" + 0.026*\"complete\" + 0.023*\"items\" + 0.019*\"dumating\" + '\n",
-      "  '0.018*\"good\" + 0.018*\"sulit\"'),\n",
+      "  '0.025*\"amoy\" + 0.018*\"mabilis_dumating\" + 0.017*\"yung_tela\" + 0.016*\"legit\" '\n",
+      "  '+ 0.014*\"kaso_maliit\" + 0.014*\"kuya_rider\" + 0.012*\"godbless\" + '\n",
+      "  '0.012*\"thank_shopee\" + 0.012*\"far\" + 0.012*\"sobrang_ganda\"'),\n",
       " (7,\n",
-      "  '0.101*\"ganda\" + 0.082*\"super\" + 0.030*\"sobrang\" + 0.025*\"quality\" + '\n",
-      "  '0.025*\"talaga\" + 0.018*\"affordable\" + 0.017*\"thank\" + 0.017*\"worth\" + '\n",
-      "  '0.011*\"price\" + 0.011*\"mura\"'),\n",
+      "  '0.046*\"order\" + 0.039*\"dumating\" + 0.021*\"color\" + 0.018*\"seller\" + '\n",
+      "  '0.016*\"inorder\" + 0.015*\"tapos\" + 0.014*\"black\" + 0.013*\"kulay\" + '\n",
+      "  '0.011*\"white\" + 0.010*\"pinadala\"'),\n",
       " (8,\n",
-      "  '0.038*\"love\" + 0.034*\"amoy\" + 0.014*\"related\" + 0.012*\"long\" + '\n",
-      "  '0.011*\"mainit\" + 0.011*\"mabango\" + 0.011*\"surely\" + 0.010*\"bet\" + '\n",
-      "  '0.009*\"video\" + 0.009*\"like\"'),\n",
+      "  '0.015*\"overall\" + 0.010*\"always\" + 0.008*\"mganda\" + 0.008*\"smooth\" + '\n",
+      "  '0.008*\"cotton\" + 0.007*\"soon\" + 0.007*\"like\" + 0.007*\"saktong_sakto\" + '\n",
+      "  '0.007*\"wall\" + 0.006*\"mascara\"'),\n",
       " (9,\n",
-      "  '0.180*\"po\" + 0.044*\"seller\" + 0.034*\"order\" + 0.034*\"thank\" + 0.024*\"ganda\" '\n",
-      "  '+ 0.022*\"ulit\" + 0.018*\"maganda\" + 0.015*\"thankyou\" + 0.014*\"thanks\" + '\n",
-      "  '0.013*\"rider\"')]\n"
+      "  '0.024*\"hehe\" + 0.021*\"thank_much\" + 0.019*\"sulit\" + 0.012*\"good_condition\" '\n",
+      "  '+ 0.010*\"well_packed\" + 0.009*\"thank_much_seller\" + 0.009*\"malambot\" + '\n",
+      "  '0.008*\"effective\" + 0.007*\"got\" + 0.007*\"hangin\"')]\n"
      ]
     }
    ],
@@ -257,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 83,
    "id": "062303dc",
    "metadata": {},
    "outputs": [
@@ -266,7 +297,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Coherence Score: 0.4606332724074339\n"
+      "Coherence Score: 0.5354085237039004\n"
      ]
     }
    ],
@@ -280,6 +311,42 @@
     ")\n",
     "coherence_lda = coherence_model_lda.get_coherence()\n",
     "print('\\nCoherence Score:', coherence_lda)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "82505894",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Saved bigrams/trigrams to bigrams.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 8 (Optional): View most common n-grams\n",
+    "from collections import Counter\n",
+    "import itertools\n",
+    "\n",
+    "# Get only tokens that are bigrams/trigrams (contain \"_\")\n",
+    "ngram_tokens = list(itertools.chain.from_iterable(\n",
+    "    [token for token in doc if '_' in token] for doc in processed_texts\n",
+    "))\n",
+    "\n",
+    "# Count frequency\n",
+    "ngram_counts = Counter(ngram_tokens)\n",
+    "\n",
+    "# Write to a file\n",
+    "with open('bigrams.txt', 'w', encoding='utf-8') as f:\n",
+    "    for phrase, count in ngram_counts.most_common():\n",
+    "        f.write(f'{phrase}\\t{count}\\n')\n",
+    "\n",
+    "print(\"\\nSaved bigrams/trigrams to bigrams.txt\")"
    ]
   }
  ],
