Tried BertTopic for LDA

--- a/LDA.ipynb
+++ b/LDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 36,
    "id": "305b0a04",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 37,
    "id": "b44f0e77",
    "metadata": {},
    "outputs": [
@@ -38,18 +38,19 @@
        "True"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import nltk\n",
     "nltk.download('stopwords')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 38,
    "id": "20eb23e6",
    "metadata": {},
    "outputs": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 39,
    "id": "04ac2df1",
    "metadata": {},
    "outputs": [
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 40,
    "id": "4ec261ac",
    "metadata": {},
    "outputs": [],
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 41,
    "id": "001e98d7",
    "metadata": {},
    "outputs": [],
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 42,
    "id": "01e67728",
    "metadata": {},
    "outputs": [],
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 43,
    "id": "215e29fa",
    "metadata": {},
    "outputs": [],
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 44,
    "id": "b3c0885c",
    "metadata": {},
    "outputs": [],
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 45,
    "id": "3446b851",
    "metadata": {},
    "outputs": [],
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 46,
    "id": "06329215",
    "metadata": {},
    "outputs": [],
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 47,
    "id": "0bfd68f1",
    "metadata": {},
    "outputs": [],
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 48,
    "id": "a38676bf",
    "metadata": {},
    "outputs": [],
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 49,
    "id": "195f2b20",
    "metadata": {},
    "outputs": [
@@ -239,44 +240,45 @@
       "\n",
       "Topics found by LDA:\n",
       "[(0,\n",
-      "  '0.081*\"po\" + 0.047*\"maganda\" + 0.029*\"seller\" + 0.025*\"ganda\" + '\n",
-      "  '0.025*\"thank_seller\" + 0.025*\"good\" + 0.023*\"order\" + 0.022*\"thank\" + '\n",
-      "  '0.019*\"item\" + 0.016*\"quality\"'),\n",
+      "  '0.018*\"food\" + 0.009*\"room\" + 0.008*\"place\" + 0.008*\"complete_orders\" + '\n",
+      "  '0.008*\"staff\" + 0.007*\"mama\" + 0.007*\"medyo_matagal\" + 0.007*\"pcs\" + '\n",
+      "  '0.007*\"purple\" + 0.007*\"tubig\"'),\n",
       " (1,\n",
-      "  '0.013*\"ganda_po\" + 0.013*\"food\" + 0.013*\"plastic\" + 0.012*\"time\" + '\n",
-      "  '0.012*\"bilis_dumating\" + 0.009*\"dumi\" + 0.008*\"expected\" + '\n",
-      "  '0.008*\"god_bless\" + 0.008*\"malakas\" + 0.007*\"part\"'),\n",
+      "  '0.033*\"gumagana\" + 0.017*\"working\" + 0.016*\"kuya_rider\" + '\n",
+      "  '0.013*\"sayang_pera\" + 0.010*\"fan\" + 0.010*\"charge\" + 0.008*\"gumana\" + '\n",
+      "  '0.007*\"bilis\" + 0.007*\"charger\" + 0.006*\"hangin\"'),\n",
       " (2,\n",
-      "  '0.018*\"still\" + 0.015*\"like\" + 0.008*\"nagustohan\" + 0.008*\"anyway\" + '\n",
-      "  '0.008*\"konting\" + 0.007*\"ringlight\" + 0.007*\"even\" + 0.007*\"thank_thank\" + '\n",
-      "  '0.007*\"excellent_quality\" + 0.007*\"freebies\"'),\n",
+      "  '0.067*\"ganda\" + 0.033*\"size\" + 0.022*\"good_quality\" + 0.020*\"ulit\" + '\n",
+      "  '0.019*\"maliit\" + 0.016*\"worth\" + 0.016*\"sakto\" + 0.012*\"manipis\" + '\n",
+      "  '0.012*\"kasya\" + 0.010*\"malaki\"'),\n",
       " (3,\n",
-      "  '0.011*\"magaan\" + 0.009*\"lakas\" + 0.008*\"bet\" + 0.007*\"maingay\" + '\n",
-      "  '0.007*\"pretty\" + 0.006*\"super_sulit\" + 0.006*\"handle\" + 0.006*\"solid\" + '\n",
-      "  '0.006*\"nice_product\" + 0.005*\"matagal_dumating\"'),\n",
+      "  '0.015*\"sulit\" + 0.014*\"ganda_quality\" + 0.012*\"expect\" + '\n",
+      "  '0.010*\"maganda_tela\" + 0.008*\"laki\" + 0.008*\"mainit\" + 0.007*\"pesos\" + '\n",
+      "  '0.007*\"tumagal\" + 0.006*\"tumbler\" + 0.006*\"makapal_tela\"'),\n",
       " (4,\n",
-      "  '0.008*\"god_bless_po\" + 0.008*\"mukhang_matibay\" + 0.008*\"mouse_pad\" + '\n",
-      "  '0.007*\"jogger\" + 0.007*\"secure\" + 0.007*\"kapal\" + 0.007*\"basa\" + '\n",
-      "  '0.006*\"socks\" + 0.006*\"mouse\" + 0.006*\"ibang_color\"'),\n",
+      "  '0.019*\"battery\" + 0.017*\"far\" + 0.013*\"soon\" + 0.012*\"nagana\" + '\n",
+      "  '0.010*\"good_condition\" + 0.009*\"sakto_size\" + 0.009*\"remote\" + '\n",
+      "  '0.007*\"nilagay\" + 0.007*\"pants\" + 0.006*\"nadeliver\"'),\n",
       " (5,\n",
-      "  '0.099*\"yung\" + 0.044*\"kaso\" + 0.026*\"kasi\" + 0.018*\"size\" + 0.012*\"parang\" '\n",
-      "  '+ 0.010*\"price\" + 0.010*\"rin\" + 0.010*\"goods\" + 0.009*\"pag\" + 0.009*\"nung\"'),\n",
+      "  '0.010*\"good_price\" + 0.009*\"sulit_price\" + 0.009*\"excellent\" + '\n",
+      "  '0.008*\"ring_light\" + 0.007*\"bulsa\" + 0.007*\"excellent_quality\" + '\n",
+      "  '0.007*\"dents\" + 0.006*\"add_size\" + 0.006*\"saktong_sakto\" + 0.006*\"madali\"'),\n",
       " (6,\n",
-      "  '0.025*\"amoy\" + 0.018*\"mabilis_dumating\" + 0.017*\"yung_tela\" + 0.016*\"legit\" '\n",
-      "  '+ 0.014*\"kaso_maliit\" + 0.014*\"kuya_rider\" + 0.012*\"godbless\" + '\n",
-      "  '0.012*\"thank_shopee\" + 0.012*\"far\" + 0.012*\"sobrang_ganda\"'),\n",
+      "  '0.053*\"maganda\" + 0.025*\"good\" + 0.025*\"dumating\" + 0.015*\"items\" + '\n",
+      "  '0.013*\"wala\" + 0.010*\"maayos\" + 0.010*\"color\" + 0.010*\"goods\" + '\n",
+      "  '0.009*\"inorder\" + 0.009*\"shop\"'),\n",
       " (7,\n",
-      "  '0.046*\"order\" + 0.039*\"dumating\" + 0.021*\"color\" + 0.018*\"seller\" + '\n",
-      "  '0.016*\"inorder\" + 0.015*\"tapos\" + 0.014*\"black\" + 0.013*\"kulay\" + '\n",
-      "  '0.011*\"white\" + 0.010*\"pinadala\"'),\n",
+      "  '0.026*\"super_ganda\" + 0.014*\"tela\" + 0.012*\"rubber\" + 0.010*\"medyo_manipis\" '\n",
+      "  '+ 0.010*\"bag\" + 0.008*\"sakto_price\" + 0.007*\"tama_kulay\" + 0.007*\"zipper\" + '\n",
+      "  '0.007*\"cotton\" + 0.007*\"masarap\"'),\n",
       " (8,\n",
-      "  '0.015*\"overall\" + 0.010*\"always\" + 0.008*\"mganda\" + 0.008*\"smooth\" + '\n",
-      "  '0.008*\"cotton\" + 0.007*\"soon\" + 0.007*\"like\" + 0.007*\"saktong_sakto\" + '\n",
-      "  '0.007*\"wall\" + 0.006*\"mascara\"'),\n",
+      "  '0.021*\"pwede\" + 0.017*\"affordable\" + 0.015*\"uulitin\" + '\n",
+      "  '0.011*\"fast_delivery\" + 0.010*\"well_packed\" + 0.009*\"phone\" + '\n",
+      "  '0.008*\"mabilis\" + 0.008*\"best\" + 0.007*\"plastic\" + 0.007*\"gaganda\"'),\n",
       " (9,\n",
-      "  '0.024*\"hehe\" + 0.021*\"thank_much\" + 0.019*\"sulit\" + 0.012*\"good_condition\" '\n",
-      "  '+ 0.010*\"well_packed\" + 0.009*\"thank_much_seller\" + 0.009*\"malambot\" + '\n",
-      "  '0.008*\"effective\" + 0.007*\"got\" + 0.007*\"hangin\"')]\n"
+      "  '0.021*\"price\" + 0.012*\"love\" + 0.011*\"much\" + 0.011*\"still\" + '\n",
+      "  '0.011*\"packaging\" + 0.011*\"medyo\" + 0.010*\"time\" + 0.010*\"bilis_dumating\" + '\n",
+      "  '0.010*\"buti\" + 0.010*\"nice\"')]\n"
      ]
     }
    ],
@@ -288,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 50,
    "id": "062303dc",
    "metadata": {},
    "outputs": [
@@ -297,7 +299,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Coherence Score: 0.5354085237039004\n"
+      "Coherence Score: 0.45241004896749104\n"
      ]
     }
    ],
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 51,
    "id": "82505894",
    "metadata": {},
    "outputs": [
@@ -347,6 +349,135 @@
     "        f.write(f'{phrase}\\t{count}\\n')\n",
     "\n",
     "print(\"\\nSaved bigrams/trigrams to bigrams.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "26e4c265",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maganda: 1504\n",
+      "good: 1033\n",
+      "dumating: 883\n",
+      "ganda: 664\n",
+      "size: 563\n",
+      "wala: 561\n",
+      "items: 483\n",
+      "quality: 458\n",
+      "sira: 448\n",
+      "color: 372\n",
+      "inorder: 372\n",
+      "maayos: 369\n",
+      "mura: 361\n",
+      "price: 352\n",
+      "gumagana: 351\n",
+      "nice: 332\n",
+      "agad: 320\n",
+      "shop: 309\n",
+      "kulay: 304\n",
+      "disappointed: 300\n",
+      "damage: 300\n",
+      "super: 290\n",
+      "medyo: 284\n",
+      "pinadala: 272\n",
+      "sobrang: 270\n",
+      "maliit: 255\n",
+      "much: 251\n",
+      "packaging: 249\n",
+      "cute: 246\n",
+      "black: 243\n",
+      "good_quality: 237\n",
+      "sayang_pera: 237\n",
+      "sakin: 236\n",
+      "ulit: 236\n",
+      "manipis: 233\n",
+      "goods: 232\n",
+      "worth: 231\n",
+      "next_time: 218\n",
+      "white: 216\n",
+      "rider: 216\n",
+      "amoy: 213\n",
+      "tas: 213\n",
+      "received: 212\n",
+      "pwede: 212\n",
+      "like: 209\n",
+      "binigay: 207\n",
+      "ba: 206\n",
+      "akala: 204\n",
+      "tama: 201\n",
+      "ordered: 197\n",
+      "working: 195\n",
+      "man: 194\n",
+      "sayang: 186\n",
+      "picture: 184\n",
+      "ganun: 184\n",
+      "maganda_quality: 184\n",
+      "design: 180\n",
+      "ibang: 178\n",
+      "sakto: 178\n",
+      "mas: 176\n",
+      "box: 175\n",
+      "nagustuhan: 173\n",
+      "time: 169\n",
+      "deliver: 168\n",
+      "mali: 164\n",
+      "naka: 163\n",
+      "malaki: 161\n",
+      "delivery: 157\n",
+      "parcel: 157\n",
+      "baby: 157\n",
+      "satisfied: 154\n",
+      "star: 153\n",
+      "bumili: 152\n",
+      "plastic: 151\n",
+      "alam: 147\n",
+      "binili: 147\n",
+      "buti: 146\n",
+      "mabilis: 143\n",
+      "pink: 142\n",
+      "one: 142\n",
+      "love: 142\n",
+      "buy: 141\n",
+      "need: 139\n",
+      "try: 138\n",
+      "battery: 138\n",
+      "daw: 136\n",
+      "anak: 134\n",
+      "refund: 134\n",
+      "bubble_wrap: 133\n",
+      "lalo: 131\n",
+      "since: 130\n",
+      "pangit: 129\n",
+      "fan: 129\n",
+      "ayos: 129\n",
+      "gamitin: 129\n",
+      "namn: 128\n",
+      "legit: 128\n",
+      "still: 127\n",
+      "super_ganda: 126\n",
+      "expect: 124\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "import itertools\n",
+    "\n",
+    "# Flatten list of tokenized docs\n",
+    "all_words = list(itertools.chain.from_iterable(processed_texts))\n",
+    "\n",
+    "# Count word frequencies\n",
+    "word_freq = Counter(all_words)\n",
+    "\n",
+    "# View top N most common words\n",
+    "top_words = word_freq.most_common(100)  # Top 50\n",
+    "for word, freq in top_words:\n",
+    "    print(f\"{word}: {freq}\")"
    ]
   }
  ],
