--- a/preprocessed-data.ipynb
+++ b/preprocessed-data.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "305b0a04",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from preprocess import remove_repetitive_symbols, bpe_tokenization"
+    "from preprocess import remove_symbols, word_tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "20eb23e6",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "04ac2df1",
    "metadata": {},
    "outputs": [
@@ -45,33 +45,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                              review  \\\n",
-      "0  at first gumagana cyapero pagnalowbat cya ndi ...   \n",
-      "1  grabi pangalawa ko ng order sa shapee pero pur...   \n",
-      "2  2l gray/black order ko. bakit 850ml lang po pi...   \n",
-      "3  walang silbing product bwesit. di gumagana dal...   \n",
-      "4  d po maganda naman po yung neck fan, pero po n...   \n",
-      "\n",
-      "                                              tokens  \n",
-      "0  [▁at, ▁first, ▁guma, gana, ▁c, ya, pero, ▁pag,...  \n",
-      "1  [▁grab, i, ▁panga, la, wa, ▁ko, ▁ng, ▁order, ▁...  \n",
-      "2  [▁2, l, ▁gra, y, /, black, ▁order, ▁ko, ., ▁ba...  \n",
-      "3  [▁walang, ▁sil, bing, ▁product, ▁bw, es, it, ....  \n",
-      "4  [▁d, ▁po, ▁maganda, ▁naman, ▁po, ▁yung, ▁ne, c...  \n"
+      "   review no.                                             review       tokens\n",
+      "0           1  at first gumagana cyapero pagnalowbat cya ndi ...           at\n",
+      "0           1  at first gumagana cyapero pagnalowbat cya ndi ...        first\n",
+      "0           1  at first gumagana cyapero pagnalowbat cya ndi ...     gumagana\n",
+      "0           1  at first gumagana cyapero pagnalowbat cya ndi ...      cyapero\n",
+      "0           1  at first gumagana cyapero pagnalowbat cya ndi ...  pagnalowbat\n"
      ]
     }
    ],
    "source": [
     "reviews_df = df.drop(columns=['sentiment'])\n",
-    "reviews_df['review'] = reviews_df['review'].apply(remove_repetitive_symbols)\n",
-    "reviews_df['tokens'] = reviews_df['review'].apply(bpe_tokenization)\n",
+    "reviews_df['review no.'] = reviews_df.index + 1\n",
+    "reviews_df['review'] = reviews_df['review'].apply(remove_symbols)\n",
+    "reviews_df['tokenized'] = reviews_df['review'].apply(word_tokens)\n",
     "\n",
+    "reviews_df = reviews_df.explode('tokenized')\n",
+    "reviews_df = reviews_df.rename(columns={'tokenized': 'tokens'})\n",
+    "\n",
+    "reviews_df = reviews_df[['review no.', 'review', 'tokens']]\n",
     "print(reviews_df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "70286f21",
    "metadata": {},
    "outputs": [
@@ -81,19 +79,19 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\D'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "C:\\Users\\Fatima Dy\\AppData\\Local\\Temp\\ipykernel_6016\\3131408332.py:1: SyntaxWarning: invalid escape sequence '\\D'\n",
+      "C:\\Users\\Fatima Dy\\AppData\\Local\\Temp\\ipykernel_28276\\3131408332.py:1: SyntaxWarning: invalid escape sequence '\\D'\n",
       "  reviews_df.to_csv(\"D:\\DLSU\\THESIS\\Aspect-Extraction-On-Shopee-Reviews\\preprocessed_reviews.csv\")\n"
      ]
     }
    ],
    "source": [
-    "# reviews_df.to_csv(\"D:\\DLSU\\THESIS\\Aspect-Extraction-On-Shopee-Reviews\\preprocessed_reviews.csv\")"
+    "reviews_df.to_csv(\"D:\\DLSU\\THESIS\\Aspect-Extraction-On-Shopee-Reviews\\preprocessed_reviews.csv\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -107,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
